@@ -711,6 +711,7 @@
   <string><id>12014</id><value>No trainers found</value></string>
   <string><id>12015</id><value>Trainer settings</value></string>
   <string><id>12016</id><value>All registered trailers are missing. Update your list</value></string>
+  <string><id>12017</id><value>Auto resume from last position</value></string>
 
   <string><id>12310</id><value>0</value></string>
   <string><id>12311</id><value>1</value></string>
